--- a/.github/workflows/rocksdb/action.yml
+++ b/.github/workflows/rocksdb/action.yml
@@ -12,6 +12,16 @@ runs:
       if: matrix.os == 'windows-latest'
       run: echo "ROCKSDB_VERSION=6.22.1.20635" >> $env:GITHUB_ENV
 
+    - name: Set local binaries path (Unix)
+      shell: bash
+      if: matrix.os != 'windows-latest'
+      run: echo "LOCAL_BINARIES_PATH=$(pwd)/local-binaries" >> $GITHUB_ENV
+
+    - name: Set local binaries path (Windows)
+      shell: pwsh
+      if: matrix.os == 'windows-latest'
+      run: echo "LOCAL_BINARIES_PATH=$(Get-Location)\local-binaries" >> $env:GITHUB_ENV
+
     - name: Cache rocksdb
       uses: actions/cache@v2
       id: cache-rocksdb
