--- a/.github/workflows/rocksdb/action.yml
+++ b/.github/workflows/rocksdb/action.yml
@@ -2,72 +2,66 @@ name: 'Compile and cache RocksDB'
 runs:
   using: "composite"
   steps:
-    - name: Set rocksdb version (Unix)
+    - name: Set rocksdb version (Linux)
       shell: bash
-      if: matrix.os != 'windows-latest'
-      run: echo "ROCKSDB_VERSION=6.22.1" >> $GITHUB_ENV
+      if: matrix.os == 'ubuntu-latest'
+      run: |
+        echo "ROCKSDB_VERSION=6.22.1" >> $GITHUB_ENV
+        echo "ROCKSDB_BUILD_PATH=$(pwd)/rocksdb_build" >> $GITHUB_ENV
+        echo "ROCKSDB_LIB_DIR=$ROCKSDB_BUILD_PATH/librocksdb.so" >> $GITHUB_ENV
+
+    - name: Set rocksdb version (MacOS)
+      shell: bash
+      if: matrix.os == 'macos-latest'
+      run: |
+        echo "ROCKSDB_VERSION=6.22.1" >> $GITHUB_ENV
+        echo "ROCKSDB_BUILD_PATH=$(pwd)/rocksdb_build" >> $GITHUB_ENV
+        echo "ROCKSDB_LIB_DIR=$ROCKSDB_BUILD_PATH/librocksdb.dylib" >> $GITHUB_ENV
 
     - name: Set rocksdb version (Windows)
       shell: pwsh
       if: matrix.os == 'windows-latest'
-      run: echo "ROCKSDB_VERSION=6.22.1.20635" >> $env:GITHUB_ENV
-
-    - name: Set local binaries path (Unix)
-      shell: bash
-      if: matrix.os != 'windows-latest'
-      run: echo "LOCAL_BINARIES_PATH=$(pwd)/local-binaries" >> $GITHUB_ENV
-
-    - name: Set local binaries path (Windows)
-      shell: pwsh
-      if: matrix.os == 'windows-latest'
-      run: echo "LOCAL_BINARIES_PATH=$(Get-Location)\local-binaries" >> $env:GITHUB_ENV
+      run: |
+        echo "ROCKSDB_VERSION=6.22.1.20635" >> $env:GITHUB_ENV
+        echo "ROCKSDB_BUILD_PATH=$(Get-Location)\rocksdb_build" >> $env:GITHUB_ENV
+        echo "ROCKSDB_LIB_DIR=$env:ROCKSDB_BUILD_PATH\rocksdb.dll" >> $env:GITHUB_ENV
 
     - name: Cache rocksdb
       uses: actions/cache@v2
       id: cache-rocksdb
       with:
-        path: ${{ env.LOCAL_BINARIES_PATH }}
-        key: rocksdb-${{ matrix.os }}-${{ env.ROCKSDB_VERSION }}
+        path: ${{ env.ROCKSDB_LIB_DIR }}
+        key: rocksdb-${{ env.ROCKSDB_VERSION }}-${{ matrix.os }}
 
-    - name: Compile rocksdb (Linux)
+    - name: Compile RocksDB (Linux)
       shell: bash
       if: steps.cache-rocksdb.outputs.cache-hit != 'true' && matrix.os == 'ubuntu-latest'
       run: |
+        mkdir -p $ROCKSDB_BUILD_PATH
+        cd $ROCKSDB_BUILD_PATH
         curl -L -O https://github.com/facebook/rocksdb/archive/refs/tags/v$ROCKSDB_VERSION.tar.gz
         tar -xzf v$ROCKSDB_VERSION.tar.gz
         cd rocksdb-$ROCKSDB_VERSION
         sudo apt install libgflags-dev libsnappy-dev zlib1g-dev libbz2-dev liblz4-dev libzstd-dev
         make shared_lib
-        cp -L librocksdb.so $LOCAL_BINARIES_PATH
+        cp -L librocksdb.so $ROCKSDB_LIB_DIR
 
     - name: Compile rocksdb (MacOS)
       shell: bash
       if: steps.cache-rocksdb.outputs.cache-hit != 'true' && matrix.os == 'macos-latest'
       run: |
+        mkdir -p $ROCKSDB_BUILD_PATH
+        cd $ROCKSDB_BUILD_PATH
         curl -L -O https://github.com/facebook/rocksdb/archive/refs/tags/v$ROCKSDB_VERSION.tar.gz
         tar -xzf v$ROCKSDB_VERSION.tar.gz
         cd rocksdb-$ROCKSDB_VERSION
         make shared_lib
-        cp -L librocksdb.dylib $LOCAL_BINARIES_PATH
+        cp -L librocksdb.dylib $ROCKSDB_LIB_DIR
 
     - name: Install rocksdb (Windows)
       shell: pwsh
       if: steps.cache-rocksdb.outputs.cache-hit != 'true' && matrix.os == 'windows-latest'
-      run: nuget install RocksDB -Version $env:ROCKSDB_VERSION -OutputDirectory $env:LOCAL_BINARIES_PATH
-
-    - name: Set ROCKSDB_LIB_DIR (Linux)
-      shell: bash
-      if: matrix.os == 'ubuntu-latest'
-      run: echo "ROCKSDB_LIB_DIR=$LOCAL_BINARIES_PATH/librocksdb.so" >> $GITHUB_ENV
-
-    - name: Set ROCKSDB_LIB_DIR (MacOS)
-      shell: bash
-      if: matrix.os == 'macos-latest'
-      run: echo "ROCKSDB_LIB_DIR=$LOCAL_BINARIES_PATH/librocksdb.dylib" >> $GITHUB_ENV
-
-    - name: Set ROCKSDB_LIB_DIR (Windows)
-      shell: pwsh
-      if: matrix.os == 'windows-latest'
       run: |
-        echo "ROCKSDB_LIB_DIR=$env:LOCAL_BINARIES_PATH\RocksDB.$env:ROCKSDB_VERSION" >> $env:GITHUB_ENV
-        Get-ChildItem -Path $env:LOCAL_BINARIES_PATH -Force -Recurse
+        New-Item $env:ROCKSDB_BUILD_PATH -itemtype directory
+        nuget install RocksDB -Version $env:ROCKSDB_VERSION -OutputDirectory $env:ROCKSDB_BUILD_PATH
+        Copy-Item $env:ROCKSDB_BUILD_PATH\RocksDB.$env:ROCKSDB_VERSION\runtimes\win-x64\native\rocksdb.dll $env:ROCKSDB_LIB_DIR
