--- a/bee-api/bee-rest-api/Cargo.toml
+++ b/bee-api/bee-rest-api/Cargo.toml
@@ -11,15 +11,67 @@ keywords = [ "iota", "bee", "framework", "node", "api" ]
 homepage = "https://www.iota.org"
 
 [dependencies]
+bee-common = { version = "0.6.0", path = "../../bee-common/bee-common", default-features = false, optional = true }
+bee-gossip = { version = "0.4.0", path = "../../bee-network/bee-gossip", default-features = false, optional = true }
 bee-ledger = { version = "0.6.1", path = "../../bee-ledger", default-features = false }
 bee-message = { version = "0.1.6", path = "../../bee-message", default-features = false }
-bee-protocol = { version = "0.2.0", path = "../../bee-protocol", default-features = false, optional = true }
+bee-pow = { version = "0.2.0", path = "../../bee-pow", default-features = false }
+bee-protocol = { version = "0.2.0", path = "../../bee-protocol", default-features = false }
+bee-runtime = { version = "0.1.1-alpha", path = "../../bee-runtime", default-features = false, optional = true  }
+bee-storage = { version = "0.9.0", path = "../../bee-storage/bee-storage", default-features = false, optional = true }
+bee-tangle = { version = "0.2.0", path = "../../bee-tangle", default-features = false, optional = true }
 
+async-trait = { version = "0.1.51", default-features = false, optional = true }
+bech32 = { version = "0.8.1", default-features = false, optional = true }
+digest = { version = "0.9.0", default-features = false, optional = true }
+futures = { version = "0.3.17", default-features = false, optional = true }
 hex = { version = "0.4.3", default-features = false }
+iota-crypto = { version = "0.9.1", default-features = false, features = [ "blake2b" ], optional = true }
+log = { version = "0.4.14", default-features = false, optional = true }
+multiaddr = { version = "0.13.0", default-features = false }
+num_cpus = { version = "1.13.0", default-features = false, optional = true }
 serde = { version = "1.0.130", default-features = false, features = [ "derive" ] }
 serde_json = { version = "1.0.68", default-features = false, features = [ "alloc" ] }
 thiserror = { version = "1.0.30", default-features = false }
+tokio = { version = "1.12.0", default-features = false, optional = true }
+warp = { version = "0.3.1", default-features = false, optional = true }
+
+[features]
+endpoints = [
+  "bee-common",
+  "bee-gossip",
+  "bee-protocol/workers",
+  "bee-runtime",
+  "bee-storage",
+  "bee-tangle",
+  "async-trait",
+  "bech32",
+  "digest",
+  "futures",
+  "iota-crypto",
+  "log",
+  "num_cpus",
+  "tokio",
+  "warp",
+]
 
 [features]
 default = [ "peer" ]
+endpoints = [
+  "bee-common",
+  "bee-gossip",
+  "bee-protocol/workers",
+  "bee-runtime",
+  "bee-storage",
+  "bee-tangle",
+  "async-trait",
+  "bech32",
+  "digest",
+  "futures",
+  "iota-crypto",
+  "log",
+  "num_cpus",
+  "tokio",
+  "warp",
+]
 peer = [ "bee-protocol" ]
