Add bee-node crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,5 @@
+# cargo-features = [ "strip" ]
+
 [workspace]
 members = [
 	"bee-api/bee-rest-api",
@@ -8,6 +10,7 @@ members = [
 	"bee-message",
 	"bee-network/bee-autopeering",
 	"bee-network/bee-gossip",
+	"bee-node",
 	"bee-pow",
 	"bee-protocol",
 	"bee-runtime",
@@ -28,3 +31,10 @@ panic = "abort"
 
 [profile.release]
 panic = "abort"
+
+[profile.production]
+codegen-units = 1
+inherits = "release"
+lto = true
+panic = "abort"
+# strip = "symbols"
