--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,7 +88,7 @@ jobs:
 
       - name: Set LD_LIBRARY_PATH (Linux)
         if: matrix.os == 'ubuntu-latest'
-        run: sudo ln -sf $ROCKSDB_LIB_DIR /usr/lib/librocksdb.so
+        run: sudo ln -vsf $ROCKSDB_LIB_DIR* /usr/lib/
 
       - name: Build
         uses: actions-rs/cargo@v1
