--- a/.github/workflows/rocksdb/action.yml
+++ b/.github/workflows/rocksdb/action.yml
@@ -75,7 +75,8 @@ runs:
         Set-Location $env:ROCKSDB_BUILD_PATH
         git clone https://github.com/facebook/rocksdb
         Set-Location rocksdb
-        git checkout tags/v$env:ROCKSDB_VERSION
+        git checkout -q tags/v$env:ROCKSDB_VERSION
+        Set-Location build
         New-Item build -itemtype directory -Force
         cmake -G "Visual Studio 17 2022" -DJNI=0 -DGFLAGS=0 -DSNAPPY=0 -DLZ4=1 -DZLIB=0 -DZSTD=0 -DXPRESS=0 ..
         Get-ChildItem -Force -Recurse
