--- a/.github/workflows/rocksdb/action.yml
+++ b/.github/workflows/rocksdb/action.yml
@@ -67,7 +67,7 @@ runs:
         cd rocksdb-$ROCKSDB_VERSION
         make shared_lib
 
-    - name: Add msbuild to PATH
+    - name: Add msbuild to PATH (Windows)
       if: inputs.os == 'windows-latest'
       uses: microsoft/setup-msbuild@v1.1
 
@@ -82,6 +82,6 @@ runs:
         git checkout -q tags/v$env:ROCKSDB_VERSION
         New-Item build -itemtype directory -Force
         Set-Location build
-        cmake -G "Visual Studio 16 2019" -DJNI=0 -DGFLAGS=0 -DSNAPPY=0 -DLZ4=1 -DZLIB=0 -DZSTD=0 -DXPRESS=0 ..
+        cmake -G "Visual Studio 16 2019" ..
         msbuild rocksdb.sln /p:Configuration=Release
         Get-ChildItem -Force -Recurse
