Install dashboard frontend step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,6 +81,14 @@ jobs:
             ${{ matrix.os }}-${{ matrix.rust }}-
             ${{ matrix.os }}-
 
+      - name: Install dashboard frontend
+        run: |
+          git submodule init
+          git submodule update --recursive --remote
+          cd bee-node/src/plugins/dashboard/frontend/
+          npm install
+          npm run build-bee
+
       - name: Build
         uses: actions-rs/cargo@v1
         with:
@@ -194,6 +202,14 @@ jobs:
             ubuntu-latest-beta-${{ env.cache-name }}-
             ubuntu-latest-beta-
             ubuntu-latest-
+
+      - name: Install dashboard frontend
+        run: |
+          git submodule init
+          git submodule update --recursive --remote
+          cd bee-node/src/plugins/dashboard/frontend/
+          npm install
+          npm run build-bee
 
       - uses: actions-rs/clippy-check@v1
         with:
@@ -329,5 +345,5 @@ jobs:
 
       - name: Run missing files check
         run: >
-          bash .github/workflows/scripts/missing_files.sh 
+          bash .github/workflows/scripts/missing_files.sh
           bee-message/fuzz
