--- a/.github/workflows/about.toml
+++ b/.github/workflows/about.toml
@@ -21,3 +21,6 @@ workarounds = [
 # For now, we include these so that the number of gathered crates matches the number of crates in `Cargo.lock`.
 ignore-build-dependencies = false
 ignore-dev-dependencies = false
+
+[warp-reverse-proxy]
+accepted = [ "NOASSERTION" ]
