--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -244,6 +244,14 @@ jobs:
             ubuntu-latest-nightly-
             ubuntu-latest-
 
+      - name: Install dashboard frontend
+        run: |
+          git submodule init
+          git submodule update --recursive --remote
+          cd bee-node/src/plugins/dashboard/frontend/
+          npm install
+          npm run build-bee
+
       - uses: actions-rs/cargo@v1
         with:
           command: install
