--- a/bee-indexer/Cargo.toml
+++ b/bee-indexer/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2021"
 bee-ledger = { version = "0.7.0", path = "../bee-ledger", default-features = false, features = [ "workers" ] }
 bee-message = { version = "0.2.0", path = "../bee-message", default-features = false }
 
+chrono = { version = "0.4.19", default-features = false}
 dotenv = { version = "0.15.0" }
 hex = { version = "0.4.3", default-features = false }
+sea-orm = { version = "0.5.0", default-features = false, features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
 sqlx = { version = "0.5", default-features = false, features = [ "macros", "migrate", "offline", "runtime-tokio-rustls", "sqlite" ] }
 tokio = { version = "1", default-features = false, features = [ "full" ] }
 
