--- a/.github/workflows/rocksdb/action.yml
+++ b/.github/workflows/rocksdb/action.yml
@@ -77,6 +77,7 @@ runs:
       run: |
         New-Item $env:ROCKSDB_BUILD_PATH -itemtype directory -Force
         Set-Location $env:ROCKSDB_BUILD_PATH
+        vcpkg install lz4
         git clone https://github.com/facebook/rocksdb
         Set-Location rocksdb
         git checkout -q tags/v$env:ROCKSDB_VERSION
