--- a/.github/workflows/rocksdb/action.yml
+++ b/.github/workflows/rocksdb/action.yml
@@ -37,6 +37,7 @@ runs:
       run: |
         echo "ROCKSDB_LIB_DIR=$env:ROCKSDB_BUILD_PATH\rocksdb\build\Release\rocksdb.lib" >> $env:GITHUB_ENV
         echo "$env:ROCKSDB_BUILD_PATH\rocksdb\build\Release" >> $env:GITHUB_PATH
+        Get-ChildItem -Force -Recurse "$env:ROCKSDB_BUILD_PATH\rocksdb\build\Release"
 
     - name: Cache RocksDB
       uses: actions/cache@v2
