--- a/bee-node/Cargo.toml
+++ b/bee-node/Cargo.toml
@@ -11,18 +11,18 @@ keywords = [ "iota", "tangle", "bee", "framework", "node" ]
 homepage = "https://www.iota.org"
 
 [dependencies]
-bee-autopeering = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
-bee-gossip = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false, features = [ "full" ] }
-bee-ledger = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false, features = [ "workers" ] }
-bee-message = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false }
-bee-protocol = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false, features = [ "workers" ] }
-bee-rest-api = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false, features = [ "endpoints", "peer" ] }
-bee-runtime = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false }
-bee-storage = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false }
-bee-storage-null = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false }
-bee-storage-rocksdb = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false, optional = true }
-bee-storage-sled = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false, optional = true }
-bee-tangle = { git = "https://github.com/iotaledger/bee.git", branch = "dev", default-features = false }
+bee-autopeering = { version = "0.3.0", path = "../bee-network/bee-autopeering", default-features = false }
+bee-gossip = { version = "0.4.0", path = "../bee-network/bee-gossip", default-features = false, features = [ "full" ] }
+bee-ledger = { version = "0.7.0", path = "../bee-ledger", default-features = false, features = [ "workers" ] }
+bee-message = { version = "0.2.0", path = "../bee-message", default-features = false }
+bee-protocol = { version = "0.2.0", path = "../bee-protocol", default-features = false, features = [ "workers" ] }
+bee-rest-api = { version = "0.2.0", path = "../bee-api/bee-rest-api", default-features = false, features = [ "endpoints", "peer" ] }
+bee-runtime = { version = "0.1.1-alpha", path = "../bee-runtime", default-features = false }
+bee-storage = { version = "0.9.0", path = "../bee-storage/bee-storage", default-features = false }
+bee-storage-null = { version = "0.1.0", path = "../bee-storage/bee-storage-null", default-features = false }
+bee-storage-rocksdb = { version = "0.5.0", path = "../bee-storage/bee-storage-rocksdb", default-features = false, optional = true }
+bee-storage-sled = { version = "0.4.0", path = "../bee-storage/bee-storage-sled", default-features = false, optional = true }
+bee-tangle = { version = "0.3.0", path = "../bee-tangle", default-features = false }
 
 anymap = { version = "0.12.1", default-features = false }
 async-trait = { version = "0.1.51", default-features = false }
