--- a/bee-node/Cargo.toml
+++ b/bee-node/Cargo.toml
@@ -11,7 +11,7 @@ keywords = [ "iota", "tangle", "bee", "framework", "node" ]
 homepage = "https://www.iota.org"
 
 [dependencies]
-bee-autopeering = { version = "0.3.0", path = "../bee-network/bee-autopeering", default-features = false }
+bee-autopeering = { version = "0.3.0", path = "../bee-network/bee-autopeering", default-features = false, features = [ "rocksdb" ] }
 bee-gossip = { version = "0.4.0", path = "../bee-network/bee-gossip", default-features = false, features = [ "full" ] }
 bee-ledger = { version = "0.7.0", path = "../bee-ledger", default-features = false, features = [ "workers" ] }
 bee-message = { version = "0.2.0", path = "../bee-message", default-features = false }
