--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -19,22 +19,35 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
           toolchain: nightly
           override: true
           components: llvm-tools-preview
+
       - uses: actions-rs/install@v0.1
         with:
           crate: cargo-binutils
           version: 0.3.3
+
       - uses: actions-rs/install@v0.1
         with:
           crate: rustfilt
           version: 0.2.1
+
+      - name: Install dashboard frontend
+        run: |
+          git submodule init
+          git submodule update --recursive --remote
+          cd bee-node/src/plugins/dashboard/frontend/
+          npm install
+          npm run build-bee
+
       - name: Run test coverage
         run: bash .github/workflows/scripts/coverage.sh
+
       - uses: coverallsapp/github-action@v1.1.2
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
