--- a/bee-message/Cargo.toml
+++ b/bee-message/Cargo.toml
@@ -37,3 +37,4 @@ num_cpus = { version = "1.13.0", default-features = false }
 [features]
 serde1 = [ "serde", "serde-big-array" ]
 std = [ ]
+cpt2 = [ ]
