--- a/bee-storage/bee-storage/Cargo.toml
+++ b/bee-storage/bee-storage/Cargo.toml
@@ -10,6 +10,12 @@ license = "Apache-2.0"
 keywords = [ "iota", "tangle", "bee", "framework", "storage" ]
 homepage = "https://www.iota.org"
 
+[package.metadata.docs.rs]
+# To build locally:
+# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --no-deps --open
+all-features = true
+rustdoc-args = ["--cfg", "doc_cfg"]
+
 [dependencies]
 packable = { version = "0.1.0", default-features = false, features = [ "serde" ] }
 serde = { version = "1.0.130", features = [ "derive" ], default-features = false }
