--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,11 @@ members = [
 	"bee-message",
 	"bee-network/bee-autopeering",
 	"bee-network/bee-gossip",
-	"bee-node",
+	"bee-node/bee-node",
+	"bee-node/bee-plugin/bee-plugin",
+	"bee-node/bee-plugin/bee-plugin-mps",
+	"bee-node/bee-plugin/bee-plugin-mqtt",
+	"bee-node/bee-plugin/bee-plugin-version-checker",
 	"bee-pow",
 	"bee-protocol",
 	"bee-runtime",
