--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,6 +101,12 @@ jobs:
           command: test
           args: --workspace --all-targets --all-features --release
 
+      - name: Doc Test
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --workspace --doc --all-features --release
+
   no_std:
     needs: build-and-test
     runs-on: ubuntu-latest
