Add cpt2 feature to gate old output/payload variants (#1075)
* Add cpt2 feature to gate old output/payload variants

* Add tests. Fix indexation payload errors.

* Reorder variants by kind

* Reorder features

* Add missing native token match arms

* Add docs including feature flags when applicable. Update CHANGELOG. Allow usage of `doc_cfg` feature when building docs.

* Doc tweaks

* Combine imports

* Remove unnecessary self qualifier

* Fix import groupings

* Move crate doc up

* Add spaces around brackets

* Order nit

* Order nit bis

* Remove PaddedIndex

Co-authored-by: Thibault Martinez <thibault@iota.org>

--- a/bee-network/bee-gossip/Cargo.toml
+++ b/bee-network/bee-gossip/Cargo.toml
@@ -11,7 +11,10 @@ keywords = [ "iota", "bee", "framework", "network", "gossip" ]
 homepage = "https://www.iota.org"
 
 [package.metadata.docs.rs]
+# To build locally:
+# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --no-deps --open
 all-features = true
+rustdoc-args = [ "--cfg", "doc_cfg" ]
 
 [package.metadata.cargo-udeps.ignore]
 development = [ "fern", "hex", "serial_test" ]
