--- a/bee-api/bee-rest-api/Cargo.toml
+++ b/bee-api/bee-rest-api/Cargo.toml
@@ -10,6 +10,12 @@ license = "Apache-2.0"
 keywords = [ "iota", "bee", "framework", "node", "api" ]
 homepage = "https://www.iota.org"
 
+[package.metadata.docs.rs]
+# To build locally:
+# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --no-deps --open
+all-features = true
+rustdoc-args = [ "--cfg", "doc_cfg" ]
+
 [dependencies]
 bee-gossip = { version = "0.4.0", path = "../../bee-network/bee-gossip", default-features = false, optional = true }
 bee-ledger = { version = "0.7.0", path = "../../bee-ledger", default-features = false }
@@ -39,6 +45,7 @@ warp = { version = "0.3.1", default-features = false, optional = true }
 
 [features]
 default = [ "peer" ]
+cpt2 = [ "bee-message/cpt2", "bee-ledger/cpt2" ]
 endpoints = [
   "bee-gossip",
   "bee-protocol/workers",
