--- a/bee-ledger/Cargo.toml
+++ b/bee-ledger/Cargo.toml
@@ -10,6 +10,12 @@ license = "Apache-2.0"
 keywords = [ "iota", "tangle", "bee", "framework", "ledger" ]
 homepage = "https://www.iota.org"
 
+[package.metadata.docs.rs]
+# To build locally:
+# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --no-deps --open
+all-features = true
+rustdoc-args = [ "--cfg", "doc_cfg" ]
+
 [dependencies]
 bee-message = { version = "0.2.0", path = "../bee-message", default-features = false, features = [ "std" ] }
 bee-runtime = { version = "0.1.1-alpha", path = "../bee-runtime", default-features = false, optional = true }
@@ -35,6 +41,7 @@ tokio-stream = { version = "0.1.7", default-features = false, optional = true }
 url = { version = "2.2.2", default-features = false, optional = true }
 
 [features]
+cpt2 = [ "bee-message/cpt2" ]
 workers = [
   "bee-runtime",
   "bee-storage",
