--- a/bee-storage/bee-storage-rocksdb/Cargo.toml
+++ b/bee-storage/bee-storage-rocksdb/Cargo.toml
@@ -10,6 +10,12 @@ license = "Apache-2.0"
 keywords = [ "iota", "tangle", "bee", "framework", "rocksdb" ]
 homepage = "https://www.iota.org"
 
+[package.metadata.docs.rs]
+# To build locally:
+# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --no-deps --open
+all-features = true
+rustdoc-args = [ "--cfg", "doc_cfg" ]
+
 [dependencies]
 bee-ledger = { version = "0.7.0", path = "../../bee-ledger", default-features = false }
 bee-message = { version = "0.2.0", path = "../../bee-message", default-features = false }
