--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ members = [
 	"bee-network/bee-gossip",
 	"bee-node/bee-node",
 	"bee-node/bee-plugin/bee-plugin",
+	"bee-node/bee-plugin/bee-plugin-dashboard",
 	"bee-node/bee-plugin/bee-plugin-mps",
 	"bee-node/bee-plugin/bee-plugin-mqtt",
 	"bee-node/bee-plugin/bee-plugin-version-checker",
