--- a/bee-node/bee-node/Cargo.toml
+++ b/bee-node/bee-node/Cargo.toml
@@ -17,6 +17,7 @@ bee-gossip = { version = "0.4.0", path = "../../bee-network/bee-gossip", default
 bee-ledger = { version = "0.6.1", path = "../../bee-ledger", default-features = false, features = [ "workers" ] }
 bee-message = { version = "0.1.6", path = "../../bee-message", default-features = false }
 bee-plugin = { version = "0.1.0", path = "../bee-plugin/bee-plugin", default-features = false }
+bee-plugin-dashboard = { version = "0.1.0", path = "../bee-plugin/bee-plugin-dashboard", default-features = false, optional = true }
 bee-plugin-mps = { version = "0.1.0", path = "../bee-plugin/bee-plugin-mps", default-features = false }
 bee-plugin-mqtt = { version = "0.1.0", path = "../bee-plugin/bee-plugin-mqtt", default-features = false }
 bee-plugin-version-checker = { version = "0.1.0", path = "../bee-plugin/bee-plugin-version-checker", default-features = false }
@@ -32,7 +33,6 @@ bee-tangle = { version = "0.2.0", path = "../../bee-tangle", default-features = 
 anymap = { version = "0.12.1", default-features = false }
 async-trait = { version = "0.1.51", default-features = false }
 auth-helper = { version = "0.1.0", default-features = false }
-cap = { version = "0.1.0", default-features = false, optional = true }
 chrono = { version = "0.4.19", default-features = false }
 ed25519 = { version = "1.3.0", default-features = false, features = [ "alloc", "pkcs8" ] }
 fern-logger = { version = "0.5.0", default-features = false }
@@ -41,16 +41,13 @@ fxhash = { version = "0.2.1", default-features = false }
 hex = { version = "0.4.3", default-features = false }
 iota-crypto = { version = "0.9.1", default-features = false, features = [ "ed25519", "random", "blake2b" ] }
 log = { version = "0.4.14", default-features = false }
-mime_guess = { version = "2.0.3", default-features = false, optional = true }
 multiaddr = { version = "0.13.0", default-features = false }
 paho-mqtt = { version = "0.9.1", default-features = false, features = [ "bundled" ] }
 pkcs8 = { version = "0.8.0", default-features = false, features = [ "alloc", "pem", "std" ] }
 rand = { version = "0.8.4", default-features = false }
 rpassword = { version = "5.0.1", default-features = false }
-rust-embed = { version = "6.2.0", default-features = false, features = [ "interpolate-folder-path" ], optional = true }
 serde = { version = "1.0.130", default-features = false, features = [ "derive" ] }
 serde_json = { version = "1.0.68", default-features = false }
-serde_repr = { version = "0.1.7", default-features = false, optional = true }
 structopt = { version = "0.3.23", default-features = false }
 thiserror = { version = "1.0.30", default-features = false }
 tokio = { version = "1.12.0", default-features = false, features = [ "signal", "rt", "macros", "rt-multi-thread" ] }
@@ -58,7 +55,6 @@ tokio-stream = { version = "0.1.7", default-features = false }
 toml = { version = "0.5.8", default-features = false }
 tracing = { version = "0.1.29", default-features = false, optional = true }
 warp = { version = "0.3.1", default-features = false }
-warp-reverse-proxy = { version = "0.4.0", default-features = false, optional = true }
 
 [lib]
 name = "bee_node"
@@ -71,6 +67,6 @@ path = "src/main.rs"
 [features]
 default = [ "rocksdb" ]
 
-dashboard = [ "cap", "mime_guess", "rust-embed", "serde_repr", "warp-reverse-proxy" ]
+dashboard = [ "bee-plugin-dashboard" ]
 rocksdb = [ "bee-storage-rocksdb" ]
 sled = [ "bee-storage-sled" ]
