--- a/bee-node/config.stardust-testnet.toml
+++ b/bee-node/config.stardust-testnet.toml
@@ -70,9 +70,9 @@ status_interval       = 10
 milestone_sync_count  = 200
 
 [protocol.byte_cost]
-byte_cost = 500
-weight_for_key = 10
-weight_for_data = 1
+v_byte_cost = 500
+v_byte_factor_key = 10
+v_byte_factor_data = 1
 
 [rest_api]
 bind_address          = "/ip4/0.0.0.0/tcp/14265"
