Fix cargo test and example

--- a/bee-network/bee-autopeering/Cargo.toml
+++ b/bee-network/bee-autopeering/Cargo.toml
@@ -46,6 +46,7 @@ prost-build = { version = "0.8", default-features = false }
 
 [[example]]
 name = "node"
+required-features = [ "in-memory" ]
 
 [features]
 default = [ "rocksdb" ]
