--- a/bee-protocol/Cargo.toml
+++ b/bee-protocol/Cargo.toml
@@ -33,7 +33,7 @@ num_cpus = { version = "1.13.0", default-features = false, optional = true }
 parking_lot = { version = "0.11.2", default-features = false, optional = true }
 rand = { version = "0.8.4", default-features = false, optional = true }
 ref-cast = { version = "1.0.6", default-features = false, optional = true }
-serde = { version = "1.0.130", default-features = false, features = [ "derive" ], optional = true }
+serde = { version = "1.0.130", default-features = false, features = [ "derive" ]}
 thiserror = { version = "1.0.30", default-features = false, optional = true }
 tokio = { version = "1.12.0", default-features = false, features = [ "rt-multi-thread" ], optional = true }
 tokio-stream = { version = "0.1.7", default-features = false, optional = true }
@@ -59,7 +59,6 @@ workers = [
   "parking_lot",
   "rand",
   "ref-cast",
-  "serde",
   "thiserror",
   "tokio",
   "tokio-stream",
