--- a/bee-indexer/Cargo.toml
+++ b/bee-indexer/Cargo.toml
@@ -3,14 +3,23 @@ name = "bee-indexer"
 version = "0.1.0"
 edition = "2021"
 
+[package.metadata.docs.rs]
+# To build locally:
+# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --no-deps --open
+all-features = true
+rustdoc-args = [ "--cfg", "doc_cfg" ]
+
 [dependencies]
 bee-ledger = { version = "0.7.0", path = "../bee-ledger", default-features = false, features = [ "workers" ] }
 bee-message = { version = "0.2.0", path = "../bee-message", default-features = false }
+#bee-rest-api = { version = "0.2.0", path = "../bee-api/bee-rest-api", default-features = false }
 
 hex = { version = "0.4.3", default-features = false }
 packable = { version = "0.1.0", default-features = false }
 sea-orm = { version = "0.6.0", default-features = false, features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
 sea-query = { version = "0.21.0", default-features = false, features = [ "backend-sqlite", "sqlx-sqlite" ] }
+serde = { version = "1.0.130", default-features = false, features = [ "derive" ] }
+serde_json = { version = "1.0.68", default-features = false, features = [ "alloc" ] }
 sqlx = { version = "0.5", default-features = false, features = [ "macros", "migrate", "offline", "runtime-tokio-rustls", "sqlite" ] }
 tokio = { version = "1", default-features = false, features = [ "full" ] }
 
