--- a/bee-network/bee-autopeering/Cargo.toml
+++ b/bee-network/bee-autopeering/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bee-autopeering"
-version = "0.3.0"
+version = "0.4.0"
 authors = [ "IOTA Stiftung" ]
 edition = "2021"
 description = "Allows peers in the same IOTA network to automatically discover each other."
@@ -46,6 +46,7 @@ prost-build = { version = "0.8", default-features = false }
 
 [[example]]
 name = "node"
+required-features = [ "in-memory" ]
 
 [features]
 default = [ "rocksdb" ]
