--- a/bee-api/bee-rest-api/Cargo.toml
+++ b/bee-api/bee-rest-api/Cargo.toml
@@ -42,6 +42,7 @@ warp = { version = "0.3.1", default-features = false, optional = true }
 
 [features]
 default = [ "peer" ]
+dashboard = []
 endpoints = [
   "bee-common",
   "bee-gossip",
