--- a/bee-node/bee-plugin/bee-plugin-version-checker/Cargo.toml
+++ b/bee-node/bee-plugin/bee-plugin-version-checker/Cargo.toml
@@ -16,5 +16,9 @@ bee-runtime = { version = "0.1.1-alpha", path = "../../../bee-runtime", default-
 async-trait = { version = "0.1.51", default-features = false }
 futures = { version = "0.3.17", default-features = false }
 log = { version = "0.4.14", default-features = false }
+reqwest = { version = "0.11.5", default-features = false, features = [ "json", "default-tls" ] }
+semver = { version = "1.0.4", default-features = false }
+serde = { version = "1.0.130", default-features = false, features = [ "derive" ] }
+serde_json = { version = "1.0.68", default-features = false }
 tokio = { version = "1.12.0", default-features = false, features = [ "signal", "rt", "macros", "rt-multi-thread" ] }
-tokio-stream = { version = "0.1.7", default-features = false }
+tokio-stream = { version = "0.1.7", default-features = false, features = [ "time" ] }
