Update config file paths

--- a/bee-node/bee-node/docker/Dockerfile
+++ b/bee-node/bee-node/docker/Dockerfile
@@ -64,8 +64,8 @@ EXPOSE 14626/udp
 COPY --from=build /bee/target/production/bee /
 
 # Copy the profiles
-COPY --from=build /bee/bee-node/config.chrysalis-comnet.toml .
-COPY --from=build /bee/bee-node/config.chrysalis-devnet.toml .
-COPY --from=build /bee/bee-node/config.chrysalis-mainnet.toml .
+COPY --from=build /bee/bee-node/bee-node/config.chrysalis-comnet.toml .
+COPY --from=build /bee/bee-node/bee-node/config.chrysalis-devnet.toml .
+COPY --from=build /bee/bee-node/bee-node/config.chrysalis-mainnet.toml .
 
 ENTRYPOINT ["/bee"]
