--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,5 +39,6 @@ jobs:
         with:
           file: ./bee-node/docker/Dockerfile
           platforms: linux/amd64,linux/arm64
+          build-args: WITH_DASHBOARD=true
           push: true
           tags: ${{ steps.meta.outputs.tags }}
