--- a/bee-indexer/Cargo.toml
+++ b/bee-indexer/Cargo.toml
@@ -24,3 +24,9 @@ tokio = { version = "1", default-features = false, features = [ "full" ] }
 
 [dev-dependencies]
 bee-test = { path = "../bee-test", default-features = false }
+
+criterion = { version = "0.3.5", default-features = false, features = [ "async_tokio" ] }
+
+[[bench]]
+name = "get_id"
+harness = false
