--- a/bee-indexer/Cargo.toml
+++ b/bee-indexer/Cargo.toml
@@ -18,6 +18,7 @@ hex = { version = "0.4.3", default-features = false }
 packable = { version = "0.2.1", default-features = false }
 sea-orm = { version = "0.6.0", default-features = false, features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
 sea-query = { version = "0.21.0", default-features = false, features = [ "backend-sqlite", "sqlx-sqlite" ] }
+sqlx = { version = "0.5.11", default-features = false, features = [ "sqlite" ] }
 serde = { version = "1.0.130", default-features = false, features = [ "derive" ] }
 serde_json = { version = "1.0.68", default-features = false, features = [ "alloc" ] }
 tokio = { version = "1", default-features = false, features = [ "full" ] }
