--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,11 +25,18 @@ on:
 jobs:
   build-and-test:
     name: build and test
+    runs-on: ${{ matrix.os }}
+    continue-on-error: ${{ matrix.experimental }}
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        rust: [nightly, beta, stable]
-    runs-on: ${{ matrix.os }}
+        rust: [stable]
+        experimental: [false]
+        include:
+          - os: [ubuntu-latest, macos-latest, windows-latest]
+            rust: [nightly, beta]
+            experimental: true 
 
     steps:
       - uses: actions/checkout@v2
