--- a/bee-node/config.stardust-testnet.json
+++ b/bee-node/config.stardust-testnet.json
@@ -75,6 +75,11 @@
     "workers": {
       "statusInterval": 10,
       "milestoneSyncCount": 200
+    },
+    "byteCost": {
+      "vByteCost": 500,
+      "vByteFactorKey": 10,
+      "vByteFactorData": 1
     }
   },
   "restApi": {
